--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.27)
+project(Simple_Cpp_Project_Template VERSION 0.1)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -10,18 +11,16 @@ elseif (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     add_compile_options(/MP)
 endif ()
 
-project(Simple_Cpp_Project_Template VERSION 0.1)
-
 configure_file(public/ProjectConfig.h.in ProjectConfig.h)
 configure_file(public/config.txt public/config.txt COPYONLY)
 
-add_executable(Simple_Cpp_Project_Template private/main.cpp)
+add_executable(${PROJECT_NAME} private/main.cpp)
 
-target_include_directories(Simple_Cpp_Project_Template PUBLIC
+target_include_directories(${PROJECT_NAME} PUBLIC
         "${PROJECT_BINARY_DIR}"
         "${PROJECT_SOURCE_DIR}/public"
 )
 
-target_include_directories(Simple_Cpp_Project_Template PRIVATE
+target_include_directories(${PROJECT_NAME} PRIVATE
         "${PROJECT_SOURCE_DIR}/private"
 )
